# todo-app-linity

./: README.md
.github/workflows/: aws.yml
backend/: .env  Cargo.toml
backend/migrations/: 20250312125939_create_users_and_todos.sql  20250312165220_add_cascade_remove_old_fk_constraint.sql
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: ProtectedRoute.tsx  TodoForm.tsx  TodoItem.tsx
frontend/context/: AuthContext.tsx
frontend/lib/: api.ts
frontend/src/types/: api.ts
