[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
bcrypt = "0.13"